--- a/src/VideoApp/Views/ControlView.xaml
+++ b/src/VideoApp/Views/ControlView.xaml
@@ -72,25 +72,45 @@
                     HorizontalAlignment="Center"
                     VerticalAlignment="Center"
                     Text="{x:Bind converters:Helpers.ToString(ViewModel.PlaybackViewModel.Position), Mode=OneWay}"/>
-
-                <TextBlock 
-                    Grid.Column="2"
-                    MinWidth="70"
-                    TextAlignment="Center"
-                    HorizontalAlignment="Center"
-                    VerticalAlignment="Center">
-                    <Run Text="-"/>
-                    <Run Text="{x:Bind converters:Helpers.ToString(ViewModel.PlaybackViewModel.RemainingTime), Mode=OneWay}"/>
-                </TextBlock>                    
-
+                
                 <controls:AppSlider
-                    Grid.Column="1"  
+                    Grid.Column="1" 
+                    VerticalAlignment="Center"
                     MaxValue="{x:Bind ViewModel.PlaybackViewModel.Duration, Mode=OneWay}"
                     NavigationStepFrequency="10"
                     StepFrequency="1"
                     Value="{x:Bind ViewModel.PlaybackViewModel.Position, Mode=OneWay}"
                     ThumbTipValueConverter="{StaticResource TimeValueConverter}"
                     PositionCommand="{x:Bind ViewModel.PlaybackViewModel.PositionCommand}"/>
+                
+                <Button
+                    Grid.Column="2"
+                    VerticalAlignment="Center"
+                    Command="{x:Bind ViewModel.PlaybackViewModel.RemainingTimeCommand}"
+                    Style="{StaticResource ControlButton}"
+                    Padding="2">
+                    <Grid>
+                        <TextBlock 
+                            MinWidth="70"
+                            TextAlignment="Center"
+                            HorizontalAlignment="Center"
+                            VerticalAlignment="Center"
+                            Visibility="{x:Bind converters:Helpers.VisibleIfNot(ViewModel.PlaybackViewModel.IsRemainingTimeEnabled), Mode=OneWay}"
+                            Text="{x:Bind converters:Helpers.ToString(ViewModel.PlaybackViewModel.Duration), Mode=OneWay}"/>
+
+                        <TextBlock 
+                            MinWidth="70"
+                            TextAlignment="Center"
+                            HorizontalAlignment="Center"
+                            VerticalAlignment="Center"
+                            Visibility="{x:Bind converters:Helpers.VisibleIf(ViewModel.PlaybackViewModel.IsRemainingTimeEnabled), Mode=OneWay}">
+                            <Run Text="-"/>
+                            <Run Text="{x:Bind converters:Helpers.ToString(ViewModel.PlaybackViewModel.RemainingTime), Mode=OneWay}"/>
+                        </TextBlock>
+                    </Grid>
+                </Button>
+
+            
             </Grid>
 
             <Grid Grid.Row="1" Margin="8,0,8,8">
