--- a/src/VideoApp/MainWindow.xaml
+++ b/src/VideoApp/MainWindow.xaml
@@ -3,13 +3,38 @@
     xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
     xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
     xmlns:local="using:VideoApp"
+    xmlns:vlc="using:LibVLCSharp.Platforms.Windows"
+    xmlns:converters="using:VideoApp.Converters"
+    xmlns:controls="using:VideoApp.Controls"
+    xmlns:views="using:VideoApp.Views"
     xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
     xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
     mc:Ignorable="d">
-   <Window.SystemBackdrop>
+    <Window.SystemBackdrop>
         <MicaBackdrop />
     </Window.SystemBackdrop>
 
-    <Grid x:Name="Root">
-    </Grid>
+    <controls:AppRoot x:Name="Root">
+        <Grid x:Name="PLAYER">
+            <vlc:VideoView 
+            x:Name="VideoControl" 
+            Initialized="VideoView_Initialized"/>
+
+            <Grid 
+            Visibility="{x:Bind converters:Helpers.VisibleIfNot(ViewModel.StartupViewModel.IsActivePlayback), Mode=OneWay}"
+            Background="Black">
+                <Image Source="ms-appx://VideoApp/Assets/logo.png" Width="64" Height="64"/>
+            </Grid>
+
+            <views:NotificationView
+            x:Name="NotificationLayer"
+            ViewModel="{x:Bind ViewModel, Mode=OneWay}"/>
+
+            <views:ControlView
+            x:Name="ControlLayer"
+            ViewModel="{x:Bind ViewModel, Mode=OneWay}"/>
+        </Grid>
+
+        <views:SettingsView x:Name="SETTINGS" Visibility="Collapsed" ViewModel="{x:Bind SettingsViewModel}"/>
+    </controls:AppRoot>
 </Window>
